--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=projetointegrador3
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/projeto_integrador
+spring.datasource.username=root
+spring.datasource.password=HackerMan
+server.port=8080
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+server.error.include-message = Always
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
